dropdown menu showing behind carrousel fixed

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -41,7 +41,9 @@ li > form > button.btn.btn-link.nav-link > i {
   padding: 0px 10px;
 }
 
-
+nav.navbar.navbar-expand-sm.navbar-light.p-0 {
+  z-index: 1 !important;
+}
 
 
 div.container-fluid.no-padding, div.col-lg-12.col-md-12.col-sm-12.col-xs-12.no-padding {
